$Id: History,v 2.29 1998/12/11 18:13:16 kurasige Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
- Dec 11, 98  H.Kurashige (particles-00-04-07a)
- Fixed bugs in G4IonTable::GetIonMass (Hisaya)

- Dec. 10, 98 H.Kurashige (particles-00-04-06)
- Fixed bugs in G4NuclearProperties::GetAtomicMass (Hisaya)

- Dec 9, 98 H.Kurashige (particles-00-04-05)
- Modified G4NuclearProperties::GetAtomicMass (Vicente)
- Modified G4IonTable::GetIonMass (Hisaya)
  (partman-00-04-05)

- Dec 5, 98 H.Kurashige (particles-00-04-04)
- Added G4GenericIon for Process List (partman-00-04-04,hadrons-00-04-01)

- Dec 2, 98 H.Kurashige (particles-00-04-03)
- Added G4ParticleTypes.hh in management/include. Moved from
  global/management/include. (G.Cosmo) (partman-00-04-03)
- Added mechanism to prevent multiple instanciation of resonaces (Hisaya)
  (shortlived-00-04-03)

- Nov 25, 98   H.Kurashige (particles-00-04-02)
- Fixed bugs in shortlived particle table (shortlived-00-04-02)
- More modification for E ~= p, i.e., photons in G4DynamicParticles
- Added command of /particle/find in G4ParticleMessenger
- Modified cut scheme for G4Ions
  (partman-00-04-02)

- Nov 20, 98   J.Allison (particles-00-04-01a)