@@ -5,8 +5,8 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4IonTable.cc,v 2.17 1998/12/11 17:56:37 kurasige Exp $
-// GEANT4 tag $Name: geant4-00 $
+// $Id: G4IonTable.cc,v 1.2 1999/01/08 11:23:51 gunter Exp $
+// GEANT4 tag $Name: particles-01-00-01 $
 //
 // 
 // --------------------------------------------------------------
@@ -60,6 +60,8 @@ G4IonTable::~G4IonTable()
     } else if (name ==  "triton") {
  
     } else if (name ==   "He3")  {
+
+    } else if (name ==   "GenericIon")  {
  
     } else {
       // delete if not static objects
