@@ -1,4 +1,4 @@
-$Id: History,v 2.29 1998/12/11 18:13:16 kurasige Exp $
+$Id: History,v 1.3 1999/02/03 16:26:41 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,13 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+- Feb 4, 99  H.Kurashige (particles-01-00-01)
+- Re-fixed bugs in destrction of ions  (Hisaya)
+
+- Dec. 15, 98 H.Kurashige(particles-00-04-08)
+- Fixed bugs in destrction of ions  (Hisaya)
+
 - Dec 11, 98  H.Kurashige (particles-00-04-07a)
 - Fixed bugs in G4IonTable::GetIonMass (Hisaya)
 
